--- a/nsfc.tex
+++ b/nsfc.tex
@@ -123,21 +123,24 @@
 
 \subsubsection{扩展设置}
 
-本文的撰写还载入了 \verb'natbib', \verb'enumitem', \verb'caption', \verb'graphicx', \verb'booktabs' 和 \verb'hyperref' 宏包, 如表~\ref{tab:extra} 所示.
+本文的撰写还载入了 \verb'natbib', \verb'enumitem', \verb'caption', \verb'graphicx' 和 \verb'booktabs' 宏包, 如表~\ref{tab:extra} 所示.
 如有其他需求, 请自行设置.
 
 \begin{table}[htbp!]
   \caption{扩展宏包}
   \label{tab:extra}
   \centering
-  \begin{tabular}{ll} \toprule
-    \sffamily 宏包  & \sffamily 功能 \\ \midrule
+  \begin{tabular}{ll}
+    \toprule
+    \sffamily 宏包  & \sffamily 功能 \\
+    \midrule
     \verb'natbib'   & 参考文献列表及引用格式 \\ 
     \verb'enumitem' & 列表项格式 \\
     \verb'caption'  & 表题和图题格式 \\
     \verb'graphicx' & 插入图片 \\
     \verb'booktabs' & 三线表横线 \\
-    \verb'hyperref' & 交叉引用的跳转超链接 \\ \bottomrule
+%    \verb'hyperref' & 交叉引用的跳转超链接 \\
+    \bottomrule
   \end{tabular} 
 \end{table}
 
